5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4133/executions/1575_1327.log
== TEST (2019-03-12 11:38:51) 
-- CODE:
print(-45)
-- OUTPUT:
-45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:38:53) 
-- CODE:
print(-45)
-- EXECUTION TIME:
0.215922
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:39:11) 
-- CODE:
print(_45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(_45)
NameError: name '_45' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:39:55) 
-- CODE:
print(/45)
-- ERROR:
File "XXXX", line 1
    print(/45)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:40:05) 
-- CODE:
print(45-)
-- ERROR:
File "XXXX", line 1
    print(45-)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:40:11) 
-- CODE:
print(45)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:40:16) 
-- CODE:
print(-45)
-- OUTPUT:
-45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:40:17) 
-- CODE:
print(-45)
-- EXECUTION TIME:
0.13342
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:40:27) 
-- CODE:
print(¬45)
-- ERROR:
File "XXXX", line 1
    print(¬45)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:40:53) 
-- CODE:
print(45)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:40:54) 
-- CODE:
print(45)
-- EXECUTION TIME:
0.202277
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:41:43) 
-- CODE:
print(90-55=45)
-- ERROR:
File "XXXX", line 1
    print(90-55=45)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:41:56) 
-- CODE:
print(=-45)
-- ERROR:
File "XXXX", line 1
    print(=-45)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:42:18) 
-- CODE:
print(\45)
-- ERROR:
File "XXXX", line 1
    print(\45)
             ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:42:37) 
-- CODE:
print(45)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:42:39) 
-- CODE:
print(45)
-- EXECUTION TIME:
0.275062
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:42:51) 
-- CODE:
print(35)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:42:52) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.114804
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
